# helm4genai

./: .gitignore  LICENSE  Makefile  MockVLLMContainerfile  README.md  cm_patched.yaml  mock_vllm.py
examples/minimal/: vela.yaml
examples/minimal/k8s/: deployment.yaml  service.yaml
examples/robots/: Makefile  README.md  pyproject.toml  vela-prod.yaml  vela.yaml
examples/robots/app/: Containerfile  app.py  config.toml  requirements.txt
examples/robots/app/baml_client/baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
examples/robots/baml_src/: robots.baml
examples/robots/k8s/: deployment.yaml  service.yaml
examples/robots/mcp_server/: pyproject.toml  server.py
private/: LEARNING.md  PRD.md
terraform/environments/local/: main.tf  versions.tf
terraform/environments/prod/: main.tf  variables.tf  versions.tf
terraform/modules/platform/: main.tf  variables.tf  versions.tf  vllm.tf
terraform/modules/platform/charts/mcp/: Chart.yaml  values.yaml
terraform/modules/platform/charts/mcp/templates/: _helpers.tpl  deployment.yaml  service.yaml
